--- a/kb.html
+++ b/kb.html
@@ -648,23 +648,29 @@ Nav Bar / Header
                 <option ng-repeat="v in switches[meta.switchMount].brands[meta.switchBrand].switches" value="{{v.part}}" ng-selected="meta.switchType == v.part">{{v.name + (v.feel ? ', '+v.feel : '') + (v.weight ? ', '+v.weight.toString()+' cN' : '')}}</option>
               </select>
             </div>
+	    <!-- Switch mounting -->
+            <div class="form-group form-group-sm form-horizontal">
+               Mounted on: 
+              <div class=" hint--top hint--rounded"
+                  data-hint="Specify if the switches are PCB mounted.">
+                <input type="checkbox" id="pcb" class="checkbox"
+                      ng-model="meta.pcb"
+                      ng-change="updateMeta('pcb')"
+                      ng-blur="validateMeta('pcb')" field="pcb"> PCB</input> &nbsp;
+              </div>
+              <div class=" hint--top hint--rounded"
+                  data-hint="Specify if the switches are plate mounted.">
+                <input type="checkbox" id="plate"  class="checkbox"
+                      ng-model="meta.plate"
+                      ng-change="updateMeta('plate')"
+                      ng-blur="validateMeta('plate')" field="plate"> Plate</input>
+              </div>
+            </div>
+
           </div>
         </div>
 
-        <!-- Switch mounting -->
-        <div class="form-group form-group-sm form-horizontal">
-          <label class="control-label col-md-2 col-lg-1 text-nowrap" for="pcb">Switch mounting:</label>
-            <div class="form-inline">
-              <input type="checkbox" id="pcb" class="checkbox"
-                      ng-model="meta.pcb"
-                      ng-change="updateMeta('pcb')"
-                      ng-blur="validateMeta('pcb')" field="pcb" hint-text="Specify if the switches are PCB mounted."> PCB</input>
-              <input type="checkbox" id="plate"  class="checkbox"
-                      ng-model="meta.plate"
-                      ng-change="updateMeta('plate')"
-                      ng-blur="validateMeta('plate')" field="plate"  hint-text="Specify if the switches are plate mounted."> Plate</input>
-            </div>
-        </div>
+
 
         <!-- Notes -->
         <div class="form-group form-group-sm">
