Cleanup some untidyness..

--- a/kb.html
+++ b/kb.html
@@ -464,8 +464,6 @@ Nav Bar / Header
           </div>
         </div>
 
-
-<!--#here#-->
         <!-- Keyswitch options-->
         <div class="form-group form-group-sm">
           <label class="control-label col-md-3 col-lg-3 text-nowrap" for="thisswitcheditor">Switch:</label>
@@ -482,7 +480,7 @@ Nav Bar / Header
               </select>
             </div>
 
-            <!-- Default keyswitch brand-->
+            <!-- Keyswitch brand-->
             <div class="hint--top hint--rounded"
                  data-hint="Specify the default brand of key switch for this key.">
               <select class="form-control input-sm dropdown"
@@ -494,7 +492,7 @@ Nav Bar / Header
               </select>
             </div>
 
-            <!-- Default keyswitch type-->
+            <!-- Keyswitch type-->
             <div class=" hint--top hint--rounded"
                  data-hint="Specify the default type of key switch for this key.">
               <select class="form-control input-sm dropdown"
@@ -508,10 +506,6 @@ Nav Bar / Header
           </div>
         </div>
 
-
-
-<!--#here#-->
-        
         <!-- Misc -->
         <div class="form-group form-group-sm">
           <label class="control-label col-md-3 col-lg-3 text-nowrap">Misc:</label>
