Moved html2canvas.js to root folder

--- a/kb.html
+++ b/kb.html
@@ -30,7 +30,7 @@ All rights reserved.
 <script type="text/javascript" src="js/cssparser.js"></script><script type="text/javascript">$cssParser = parser;</script>
 <script type="text/javascript" src="js/color.js"></script>
 <script type="text/javascript" src="js/jsonl.min.js"></script>
-<script type="text/javascript" src="js/html2canvas.js"></script>
+<script type="text/javascript" src="html2canvas.js"></script>
 <script type="text/javascript" src="extensions.js"></script>
 <script type="text/javascript" src="render.js"></script>
 <script type="text/javascript" src="serial.js"></script>
