--- a/kb.html
+++ b/kb.html
@@ -32,14 +32,11 @@ All rights reserved.
 <script type="text/javascript" src="js/cssparser.js"></script><script type="text/javascript">$cssParser = parser;</script>
 <script type="text/javascript" src="js/color.js"></script>
 <script type="text/javascript" src="js/jsonl.min.js"></script>
-<script type="text/javascript" src="html2canvas.js"></script>
+<script type="text/javascript" src="js/html2canvas.min.js"></script>
 <script type="text/javascript" src="extensions.js"></script>
 <script type="text/javascript" src="render.js"></script>
 <script type="text/javascript" src="serial.js"></script>
 <script type="text/javascript" src="kb.js"></script>
-<!--<script type="text/javascript" src="pngsave.js"></script>-->
-
-
 </head>
 <body ng-controller="kbCtrl"
       ng-mouseup="selectRelease($event)"
@@ -183,9 +180,8 @@ Nav Bar / Header
     </button>
   </div>
   <div class="btn-group pull-right" style="margin-right: 4px;">
-    <button type="button" class="btn btn-success" ng-click="downloadSvg()" style="margin-right: 4px";><i class="fa fa-download"></i> Download SVG (experimental)</button>
-    &nbsp;
-    <button type="button" class="btn btn-success" id="pngSave"><i class="fa fa-download"></i> Download PNG (experimental)</button>
+    <button type="button" class="btn btn-success" ng-click="downloadSvg()"><i class="fa fa-download"></i> Download SVG</button>
+    <button type="button" class="btn btn-success" id="pngSave"><i class="fa fa-download"></i> Download PNG</button>
   </div>
 
 
