Switch Download PNG from JQuery-style to Angular-style

--- a/kb.html
+++ b/kb.html
@@ -181,7 +181,7 @@ Nav Bar / Header
   </div>
   <div class="btn-group pull-right" style="margin-right: 4px;">
     <button type="button" class="btn btn-success" ng-click="downloadSvg()"><i class="fa fa-download"></i> Download SVG</button>
-    <button type="button" class="btn btn-success" id="pngSave"><i class="fa fa-download"></i> Download PNG</button>
+    <button type="button" class="btn btn-success" ng-click="downloadPng()"><i class="fa fa-download"></i> Download PNG</button>
   </div>
 
 
